# state-machines-rs

./: .release-please-manifest.json  Cargo.toml  README.md
examples/async_patterns/: Cargo.toml
examples/async_patterns/src/: main.rs
examples/basic_transitions/: Cargo.toml
examples/basic_transitions/src/: main.rs
examples/callbacks_lifecycle/: Cargo.toml
examples/dynamic_dispatch_when/: Cargo.toml
examples/dynamic_dispatch_when/src/: main.rs
examples/guards_and_validation/: Cargo.toml
examples/hierarchical_thinking/: Cargo.toml
examples/hierarchical_thinking/src/: main.rs
examples/no_std_flight/: Cargo.toml
examples/traffic_light/: Cargo.toml
examples/traffic_light/src/: main.rs
state-machines/: CHANGELOG.md  Cargo.toml  README.md
state-machines-cli/: Cargo.toml
state-machines-cli/src/: main.rs
state-machines-core/: CHANGELOG.md  Cargo.toml
state-machines-core/src/: lib.rs  schema.rs
state-machines-macro/: CHANGELOG.md  Cargo.toml
state-machines-macro/src/: codegen.rs  parser.rs  types.rs  validation.rs
state-machines-macro/src/codegen/: dynamic.rs  inspect.rs  typestate.rs
state-machines/benches/: typestate_transitions.rs
state-machines/src/: lib.rs
state-machines/tests/: around_callbacks.rs  async_callback_errors.rs  async_machine.rs  concrete_context.rs  dynamic_dispatch.rs  spaceship_payload.rs
